# neuromorphic_network

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
.omx/plans/: brain-inspired-3d-model-feasibility.md  brain-inspired-3d-model-implementation-tracker.md
artifacts/: README.md
configs/: brain_mapping.yaml  modules.yaml
configs/experiments/: smoke.yaml
configs/tasks/: profiles.yaml
docs/: baseline_spec.md  computational_graph.md  evidence_registry.md  experiment_artifacts.md  experiment_protocols.md  module_hypotheses.md  module_lifecycle.md  p2_implementation_spec.md  p3_implementation_spec.md  p4_implementation_spec.md  project_tracker.md  scientific-boundaries.md  statistical_protocol.md
docs/change_requests/: CR-002.md  CR-003.md
docs/decisions/: ADR-006.md
docs/deviations/: DR-001.md  DR-002.md  DR-003.md
locks/: osx-arm64-conda.explicit.txt  osx-arm64-pip.txt
reports/: README.md
reports/ci/: initial-green.md
reports/environment/: README.md  bootstrap-notes.md  osx-arm64.json
reports/gates/: GATE-0.md  GATE-1.md  GATE-2.md  GATE-3.md  GATE-4-MECH.md  GATE-4-QUAL.md  GATE-4.md  GATE-NN-MVP-v2.md  GATE-NN-MVP.md
reports/p1/: associative_recall_gru.json  (+1 more)
schemas/: network-mvp-v1.json  p3-suite-registry-v1.json  p4-suite-registry-v1.json  run-manifest-v1.json  telemetry-v1.json  telemetry-v2.json
scripts/: capture_environment.py  check_environment.py  check_repository_hygiene.py  p3_control.py  p3_full_run.sh  p4_control.py  p4_run.sh  summarize_p1.py  summarize_p3.py
(+143 files in other folders)
