[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromorphic"
version = "0.3.0"
description = "Research scaffold for a testable brain-inspired modular neural network"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "LicenseRef-Proprietary"
authors = [{ name = "Neuromorphic Project Authors" }]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=2.0,<3",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0,<7",
  "torch==2.12.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "hypothesis>=6.100,<7",
  "jsonschema>=4.23,<5",
  "mypy>=1.15,<2",
  "pre-commit>=4,<5",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuromorphic = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "scripts", "tests"]
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra --strict-config --strict-markers --cov=neuromorphic --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "mps: requires an available Apple Metal Performance Shaders backend",
]
